--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FOS_EMAIL_ADDRESS="neq@o2.pl"
 FOS_EMAIL_SENDER="neq@o2.pl"
 MAILER_URL="smtp://localhost:25?encryption& mode="
 DATABASE_NAME="119"
-DATABASE_URL="pgsql://neq@127.0.0.1/119"
+DATABASE_URL="pgsql://neq:wpizdu@127.0.0.1/119"
 DATABASE_ENCODING="utf8"
 OAUTH_FACEBOOK_ID="2410465105923571"
 OAUTH_FACEBOOK_SECRET="25cef29759c22c1fe5ad0b8bbbc30e7c"
